docs/requirements/v0.4.0/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want to support search-after pagination ([#7](https://github.com/NASA-PDS/peppi/issues/7)) 


This requirement is not impacted by the current version
## As a user, I want my code to use the best access point for the data ([#8](https://github.com/NASA-PDS/peppi/issues/8)) 


This requirement is not impacted by the current version
## As a user, I want to generate a CSV table output based upon a specific query ([#9](https://github.com/NASA-PDS/peppi/issues/9)) 


This requirement is not impacted by the current version
## As a user, I want to know how many products match my query  ([#25](https://github.com/NASA-PDS/peppi/issues/25)) 


This requirement is not impacted by the current version
## As a data user, I want to tell which products I used in a study. ([#28](https://github.com/NASA-PDS/peppi/issues/28)) 


This requirement is not impacted by the current version
## As a user, I want to search for products based upon a target LID ([#29](https://github.com/NASA-PDS/peppi/issues/29)) 


This requirement is not impacted by the current version
## As a user, I want to search for products based upon a investigation LID ([#30](https://github.com/NASA-PDS/peppi/issues/30)) 


This requirement is not impacted by the current version
## As a user, I want to search for products based upon a instrument LID ([#31](https://github.com/NASA-PDS/peppi/issues/31)) 


This requirement is not impacted by the current version
## As a user, I want to search for observational products only ([#32](https://github.com/NASA-PDS/peppi/issues/32)) 


This requirement is not impacted by the current version
## As a user, I want to search for collection products only ([#33](https://github.com/NASA-PDS/peppi/issues/33)) 


This requirement is not impacted by the current version
## As a user, I want to search for bundle products only ([#34](https://github.com/NASA-PDS/peppi/issues/34)) 


This requirement is not impacted by the current version
## As a user, I want to filter on a specific processing level ([#35](https://github.com/NASA-PDS/peppi/issues/35)) 


This requirement is not impacted by the current version
## As a user, I want to see an online reference documentation of the library ([#47](https://github.com/NASA-PDS/peppi/issues/47)) 


This requirement is not impacted by the current version
## As a user, I want my query response as a Pandas DataFrame ([#57](https://github.com/NASA-PDS/peppi/issues/57)) 


This requirement is not impacted by the current version
## As a user, I want to transform binary tables (.dat) in CSVs for all members of a collection ([#60](https://github.com/NASA-PDS/peppi/issues/60)) 


This requirement is not impacted by the current version
## As a user, I want to read all tables within a collection into a pandas DataFrame ([#61](https://github.com/NASA-PDS/peppi/issues/61)) 


This requirement is not impacted by the current version
## As a developer, I want to install pds.peppi in a conda environment ([#63](https://github.com/NASA-PDS/peppi/issues/63)) 


This requirement is not impacted by the current version
## As a user, I want to limit the number of fields returned ([#64](https://github.com/NASA-PDS/peppi/issues/64)) 


This requirement is not impacted by the current version
## As a user, I want to use peppi with python 3.9  ([#66](https://github.com/NASA-PDS/peppi/issues/66)) 


This requirement is not impacted by the current version